# local-agentic-rag

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: agent.py  config.py  main.py
app/db/: chroma.py
app/ingestion/: chunker.py  docx.py  metadata.py  pdf.py  pptx.py  xlsx.py
app/tools/: ingest.py  metadata.py  retrieve.py
prompts/: system.txt
