[project]
name = "ai-tutor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb==0.5.23",
    "openai>=2.14.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.5.0",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "streamlit>=1.52.2",
    "tiktoken>=0.12.0",
]
